mucho changes, added frontend edit for events

--- a/priv/lib-src/Makefile
+++ b/priv/lib-src/Makefile
@@ -1,10 +1,7 @@
 .PHONY: style
 
-all: style bootstrap tinymce
+all: style
 
 # Main style for the website
 style:
 	sass --no-source-map --update style.scss:../lib/css/style.css
-
-tinymce: 
-	sass --no-source-map --update tinymce-zotonic.scss ../lib/css/tinymce-zotonic.css
