--- a/priv/zotonic_site.config
+++ b/priv/zotonic_site.config
@@ -74,6 +74,7 @@
         mod_admin_predicate,
         mod_admin_merge,
         mod_admin_statistics,
+        mod_admin_frontend,
         mod_site_update,
 
         mod_custom_redirect,
